Profile picture changed

--- a/src/languages/es/es.json
+++ b/src/languages/es/es.json
@@ -18,7 +18,7 @@
         "title": "Sobre Mí",
         "subtitle": "Hola a todos",
         "p-1": "Con un talento innato para la resolución de problemas únicos y desafiantes, manejados con una creatividad inigualable.",
-        "p-2": "Desarrollador web peruano, creando diseños interactivos y elegantes. Priorizando la experiencia del usuario en cada proyecto.",
+        "p-2": "Desarrollador web, creando diseños interactivos y elegantes. Priorizando la experiencia del usuario en cada proyecto.",
         "p-3": "Como desarrollador web apasionado por el diseño y la experiencia del usuario, me especializo en el desarrollo frontend, creando nuevos conceptos para mostrar una identidad única en mi trabajo.",
         "p-4": "Cuando no estoy frente a la computadora, estoy tocando el piano, la guitarra, jugando al fútbol o bailando Marinera (Danza Peruana)."
     },
