--- a/src/languages/en/en.json
+++ b/src/languages/en/en.json
@@ -18,7 +18,7 @@
         "title": "About Me",
         "subtitle": "Hello everybody",
         "p-1": "With an innate talent for unique and challenging problem solving, handled with an unmatched creativity.",
-        "p-2": "Peruvian Web developer, making interactive and elegant designs. Prioritizing the user experience in each project",
+        "p-2": "Web developer, making interactive and elegant designs. Prioritizing the user experience in each project",
         "p-3": "As a web developer passionate about design and user experience, I specialize in front-end development, creating new concepts to show a unique identity in my work.",
         "p-4": "When I'm not in front of the computer I'm playing piano, guitar, soccer or dancing Marinera (Peruvian dance)."
     },
