--- a/src/languages/en/en.json
+++ b/src/languages/en/en.json
@@ -31,7 +31,7 @@
         "h3": "ORDINARY SKILLS",
         "btn-text": "Get my résumé",
         "quote": "Don't be upset when people reject you. Nice things are rejected all the time by people who can't afford them.",
-        "quote-title": "Today's quote"
+        "quote-title": "My favorite quote"
     },
     "footer": {
         "title": "START A PROJECT",
