--- a/src/languages/es/es.json
+++ b/src/languages/es/es.json
@@ -31,7 +31,7 @@
         "h3": "HABILIDADES ORDINARIAS",
         "btn-text": "Obtén mi résumé",
         "quote": "No te molestes cuando la gente te rechace. Las cosas bonitas son rechazadas todo el tiempo por personas que no pueden permitírselas.",
-        "quote-title": "Frase del día"
+        "quote-title": "Mi cita favorita"
     },
     "footer": {
         "title": "INICIAR UN PROYECTO",
